# leadfinder

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_address_dedup.py  003_scoring_fields.py  004_outreach_draft_fields.py  005_export_row_count.py  006_scheduled_tasks.py
app/: __init__.py  main.py
app/api/: background_routes.py  deps.py  export_routes.py  health.py  inspection_routes.py  leads.py  outreach_routes.py  scans.py  scoring_routes.py  web.py  web_actions.py  web_common.py  web_pages.py
app/core/: config.py  (+1 more)
docs/: LIVE_ROLLOUT.md
scripts/: entrypoint-app.sh  entrypoint-scheduler.sh  entrypoint-worker.sh  migrate.sh  stack.sh  wait_for_dependencies.py
tests/: conftest.py  test_api_ingestion.py  test_background_api.py  test_config.py  test_dashboard.py  test_dedup.py  test_deployment.py  test_export_api.py  test_export_serializers.py  test_export_service.py  test_file_storage.py  test_health.py  test_inspection_api.py  test_inspection_heuristics.py  test_inspection_service.py  test_lead_normalization.py  test_normalize.py  test_normalize_real_data.py  test_outreach_api.py  test_outreach_service.py  test_outreach_templates.py  test_queue.py  test_scan_service.py  test_scheduler.py  test_scoring_api.py  test_scoring_rules.py  test_scoring_service.py  test_tomtom_provider.py  test_wait_for_dependencies.py  test_worker_handlers.py  test_worker_retry.py
(+95 files in other folders)
